Add Change Customer Name to gRPC/REST adapter
